# gwpopulation-additional-models

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
gwpopulation_additional_models/: __init__.py  interpolated.py  mixture.py  vamana.py
tests/: test_models.py
