[metadata]
name = gwpopulation_additional_models
description = Additional population models for use with gwpopulation
url = https://github.com/ColmTalbot/gwpopulation-flexible-models
author = Colm Talbot
author_email = talbotcolm@gmail.com
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = ">=3.8"

[options]
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
gwpopulation.xp =
  flexible_mixture = gwpopulation_flexible_models.mixture
  flexible_interpolated = gwpopulation_additional_models.interpolated
  vamana = gwpopulation_additional_models.vamana

[options.extras_require]
cupy = cupy
jax =
  jax
  jaxlib
pages = file: pages_requirements.txt
test = file: test_requirements.txt

[options.packages.find]
exclude =
    test
    venv

[flake8]
exclude = .git,build,dist,docs,test,*__init__.py
max-line-length = 120
ignore = E129 W503

[tool:pytest]